[gd_scene load_steps=9 format=3 uid="uid://lvlv07ceixwe"]

[ext_resource type="Texture2D" uid="uid://yb00faqpl4cd" path="res://Assets/pokedew3 tilesets/trees.png" id="1_5gqt2"]
[ext_resource type="Script" path="res://Assets/Breakables/Scripts/BreakableTree.gd" id="1_kbk75"]
[ext_resource type="PackedScene" uid="uid://cg7ejmoodyw6w" path="res://Assets/Shared/TransparencyArea.tscn" id="2_1fq5i"]
[ext_resource type="PackedScene" uid="uid://py7apefffby" path="res://Assets/Shared/Loot/LootDropper.tscn" id="4_rkm0t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kupqf"]
radius = 18.1108

[sub_resource type="Animation" id="Animation_pj3gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Canopy:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Canopy:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eftje"]
resource_name = "canopyfall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Canopy:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Canopy:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.666667, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vlmrk"]
_data = {
"RESET": SubResource("Animation_pj3gn"),
"canopyfall": SubResource("Animation_eftje")
}

[node name="Tree" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 9
script = ExtResource("1_kbk75")

[node name="Stump" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -60)
texture = ExtResource("1_5gqt2")
offset = Vector2(-1, 88)
hframes = 6
vframes = 2
frame = 9
region_rect = Rect2(33, 183, 89, 62)

[node name="Canopy" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(0, -31)
texture = ExtResource("1_5gqt2")
offset = Vector2(0, -30)
hframes = 6
vframes = 2
region_rect = Rect2(16, 10, 122, 156)

[node name="Area2D" parent="Canopy" instance=ExtResource("2_1fq5i")]
script = null

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Canopy/Area2D"]
polygon = PackedVector2Array(-22, -4, -50, -29, -27, -115, 27, -118, 48, -32, 28, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -14)
shape = SubResource("CircleShape2D_kupqf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vlmrk")
}

[node name="Timer" type="Timer" parent="."]

[node name="LootDropper" parent="." instance=ExtResource("4_rkm0t")]

[connection signal="body_entered" from="Canopy/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Canopy/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
